syntax = "proto3";

package pb;

option go_package = "github.com/PYTNAG/simpletodo/pb";

message GetTasksRequest {
    int32 list_id = 1;
}